@@ -14,6 +14,10 @@ RELEASE X.X.X - XXX
 
     - Fix typos in the man page.
 
+  From Gottfried Ganssauge:
+
+    - Support execution when SCons is installed via easy_install.
+
   From Steven Knight:
 
     - Make the messages for Configure checks of compilers consistent.
